# JMR_CKF

./: clear_stash.sh  commit.sh  kill_trial.sh
archive/: remote_mkdir_p.sh
archive/gazebo_launch/: uav.launch  ugv.launch  vicon.launch
archive/launch/: experiment.launch  hast.launch  hast_slam.launch  hast_uavSLAM.launch  kobuki_base.launch  kobuki_logger.launch  param_logger.launch  uavMuxxer.launch
archive/scripts/: batchdata.sh  batchdirs.sh  copy_cal_data.sh  iterate_allrand.sh  iterate_rand.sh  iterate_trials.sh  pompei_bad.sh  process_iteration_plots.sh  pull_from.sh  pull_to_ares.sh  push_to_ares.sh  remote_test.sh  remote_trials.sh  rename_sed.sh  rsync_to_atlas.sh  setup_chrony.sh  splitcsv_q.py
archive/src/: experiment.cpp  jointSLAM.cpp  oneCKF.cpp  rostimeCaller.cpp  test_nump.py  test_python.py  uavMuxxer.cpp  uavSLAM.cpp
hast/: CMakeLists.txt  README.md  package.xml
hast/cam_info/: 16306423.yaml  16369047.yaml  17496985.yaml  17496991.yaml  copyyamls.sh  ugv1_pgr_params.yaml  ugvCalPGR.m
hast/cam_info/archive/: 17496985_backup.yaml  17496985_matlab.yaml  17496985_python.yaml  17496991_backup.yaml  17496991_matlab.yaml  17496991_python.yaml  kobukiCalChameleonPGR.m
hast/cam_info/calibration/: 17496985.yaml  17496991.yaml  readme.md  ugv1_20200122.ini  ugv1_H_cam2ugv_20200123.yaml  ugv1_H_cam2ugv_20200128.yaml  ugv1_H_cam2ugv_20200129.yaml  ugv1_pgr.launch  ugv1_pgr_params.yaml  ugv1_test_cal.m  ugv2_20200122.ini  ugv2_H_cam2ugv.yaml  ugv2_H_cam2ugv_20200123.yaml  ugv2_H_cam2ugv_20200129.yaml  ugv2_pgr.launch  ugv2_pgr_params.yaml
hast/cam_info/calibration/config/: ares_cal.rviz
hast/cam_info/calibration/launch/: cal_base.launch  cal_teleop.launch  cal_trigger.launch  calibration_recorder.launch  gator_w_ugvs.launch  stereo_cal.launch  test_calibration.launch
hast/cam_info/calibration/src/: cal_func.m  calibrate_ugv_stereo.py  finalize_calibration.m  matlabCalibration.m  rigid_transform_3D.m  sandbox.py  sandbox_calibrate.py  sc_finalize_calibration.m  untitled.m  writeYaml.m  write_vicon_data_to_py.m
hast/cam_info/calibration/yaml/: calibrate_ugv_stereo.yaml
hast/cam_info/ugvn/: gazebo_H_cam2ugv.yaml  ugv1_H_cam2ugv.yaml  ugv1_pgr_params.yaml  ugv3_H_cam2ugv.yaml
hast/classes/include/: DiscreteKF.hpp  apriltagclass.hpp  ckfClass.hpp  color.hpp  fileops.hpp  genheaders.hpp  hastUAV.hpp  hastUGV.hpp  utils.hpp
hast/classes/src/: DiscreteKF.cpp  apriltagclass.cpp  ckfClass.cpp  fileops.cpp  hastUAV.cpp  hastUGV.cpp  utils.cpp
hast/config/: stereo_gazebo_params.yaml  stereo_tbrl_params.yaml  vicon_dictionary.yaml
hast/config/bashros/: .bashgazebo  ares  ares.bashros  argo  argo.bashros  atlas  atlas.bashros  hermes.bashros  pisa.bashros  titan.bashros  xauth.bashrc
hast/config/kobuki/: kobuki_costmap_common_params.yaml  kobuki_costmap_global_params.yaml  kobuki_costmap_local_params.yaml  kobuki_dwa_gazebo.yaml  kobuki_dwa_tbrl.yaml  kobuki_move_base_params.yaml  kobuki_navfn_global.yaml  kobuki_rollout_gazebo.yaml  kobuki_rollout_tbrl.yaml  mk3.bashros  mk3a.bashros  ugv1_frames_and_topics.yaml  ugv2_frames_and_topics.yaml  ugv3_frames_and_topics.yaml  ugv4_frames_and_topics.yaml
hast/config/rviz/: gazebo_ugvn.rviz  vicon_ugvn.rviz  vicon_urdf_rviz.launch
hast/include/: jointSLAM_c.hpp
hast/launch/: ardrone.launch  countdown.launch  globaltf.launch  goalPubCli.launch  hast_april_bottomcam.launch  hast_ardrone.launch  hast_jointSLAM.launch  hast_n.launch  hast_stereo_obs.launch  hast_uav.launch  hast_uavAutopilot.launch  hast_uavCKF.launch  hast_ugv.launch  hast_ugvCKF.launch  init.launch  navdata_echo.launch  rvis.launch  rviz_display.launch  rviz_tags.launch  trial.launch  trial_params.launch  ugvAction.launch  ugvMuxxer.launch  ugv_logger.launch  vicon_logger.launch  vicon_trial.launch  wait_for_trial_finish.launch
hast/launch/kobuki/: kobuki_base_n.launch  kobuki_driver.launch  kobuki_move_base.launch  kobuki_pgr.launch  mk3_pgr.launch  mk3a_pgr.launch  ugvn_pgr.launch
hast/msg/: ckfugv_sensor.msg  flag.msg  posewithcov.msg  slam_poses.msg  stereougv_sensor.msg  synctime.msg  uavmux.msg  uavstate.msg  ugvmux.msg  ugvmuxstatus.msg  ugvposewithcov.msg
hast/src/: count_down.cpp  goalPubCli.cpp  recordCal.py  splitSLAM.cpp  stereoObs.cpp  tag_tfrviz_init.py  test_stereoCal.py  trial.cpp  uavAutopilot.cpp  uavCKF.cpp  uav_down_cam_switch.py  uav_topic_switch.py  ugvAction.cpp  ugvCKF.cpp  ugvMuxxer.cpp  vicon_logger.py  wait_for_trial_finish.cpp
hast/src_alt/: cmdVelRepub.cpp  killHast.cpp  param_logger.py  rawImagePubClass.cpp  shutdownListener.cpp  slamswitch.py  stereoRaw.cpp  triggerSaveRaw.cpp
hast/srv/: ckfshare.srv  servmuxmap.srv  servtime.srv  uavpicket.srv  ugvdrive.srv  ugvgoal.srv  ugvugvsensor.srv
hast_gazebo/: GAZEBO_README.md
hast_gazebo/config/: gazebo_ugvn.rviz  logger_dictionary.yaml
hast_gazebo/launch/: empty_world.launch  gazebo_logger.launch  gazebo_n_logger.launch  gazebo_trial.launch  gazebo_uav.launch  hast_n.launch  init.launch  init_uav_rviz.launch  rviz_subset.launch  rviz_tags_subset.launch  slam.launch  spawn_robots.launch  (+3 more)
maps/: tags_02.launch  tags_03.launch  tags_05.launch
matlab/: CodeABerrors.m  CodeCDEFerrors.m  Code_errors.m  Code_errors2.m  LKF.m  batch_cruft.m  batchcodes_1604.m  batchslam_1604.m  calculateErrors.m  calculateErrors_broken.m  clip_matrix.m  code_plot.m  error_over_d_traveled.m  jointslam_1604.m  linspecer.m  loadJointSlamData.m  loadrundotm.m  make_rand_map.m  matlab.pid  matlabCalibration.m  matrixify_error_vectors.m  nD_interp1.m  nD_spliner.m  plotBatchSlam.m  plotErrors.m  plotJointSlam.m  plot_fig7  printfig.m  process_iteration.m  process_iteration_plots.m  reshapeCellMat.m  rmfields.m  slamEigs.m  test1.m  testStereo  testStereo.m
notes/: goal_point_ime_error.txt
scripts/: build_hast.bash  check_host.sh  evodirs.sh  exclude_list.txt  local_trials.sh  makedirs.sh  move_bad.py  move_bad.sh  rmrf.sh  rsync_bad.sh  rsync_good.sh  single_trial.sh  specific_trials.sh  test.py  test_scripts.sh
wifi_autoconnect/: CMakeLists.txt  README.md  package.xml
(+81 files in other folders)
